--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "typing",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "homepage": "https://marktheskies.github.io/minimalist-typer/",
   "engines": {
     "npm": "^8.11.0",
