--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "^18.13.0"
   },
   "dependencies": {
+    "@fontsource/ubuntu-mono": "^4.5.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
